b=153456 r=kmmclusk sr=waterson.  Took out a realizepalette call to stop some performance problems on windows.  This will effect only 256 color mode.