gfx/src/windows/nsRenderingContextWin.cpp
@@ -2641,7 +2641,12 @@ NS_IMETHODIMP nsRenderingContextWin :: CopyOffScreenBits(nsDrawingSurface aSrcSu
 
       if (palInfo.isPaletteDevice && palInfo.palette){
         ::SelectPalette(destdc, (HPALETTE)palInfo.palette, PR_TRUE);
-        ::RealizePalette(destdc);
+        // this is called to many times here.. taking this out because it breaks
+        // embedding.. its like fighting palettes.  All the palette stuff should
+        // be taken out.. but its so late in the beta cycle... I am taking the safe
+        // road until I can get all this figured out.. and completed correctly.
+        // Opened bug #153367 to take care of this palette issue.
+        //::RealizePalette(destdc);
         ::UpdateColors(mDC);                                                      
       }
 
